--- a/cap-reader.html
+++ b/cap-reader.html
@@ -4,43 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAP File Reader</title>
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/navbar.css">
+    <link rel="stylesheet" href="./assets/styles/footer.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Open Sans', sans-serif;
+            background-color: var(--body-color);
+            color: var(--text-color);
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f9;
             margin: 0;
+            animation: fadeIn 1s ease-in;
         }
         .container {
             text-align: center;
-            background-color: #fff;
+            background-color: var(--secondary-body);
             padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            border: 1px solid var(--border-color);
+            box-shadow: 0 10px 20px rgba(255, 10, 65, 0.3);
+            animation: slideUp 0.8s ease-out;
         }
         input[type="file"] {
             margin-top: 20px;
+            padding: 10px;
+            border: 1px solid var(--border-color);
+            border-radius: 5px;
+            background: transparent;
+            color: var(--text-color);
         }
         button {
             margin-top: 20px;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: var(--border-color);
             color: white;
             border: none;
             cursor: pointer;
             border-radius: 5px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #e0093a;
+            transform: translateY(-2px);
         }
         pre {
             margin-top: 20px;
-            background-color: #eee;
+            background-color: var(--secondary-body);
             padding: 15px;
             border-radius: 5px;
+            border: 1px solid var(--border-color);
+            color: var(--text-color);
+            text-align: left;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideUp {
+            from { transform: translateY(30px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
     </style>
 </head>
