--- a/pcap-decoder.html
+++ b/pcap-decoder.html
@@ -4,20 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PCAP Decoder</title>
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/navbar.css">
+    <link rel="stylesheet" href="./assets/styles/footer.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Open Sans', sans-serif;
+            background-color: var(--body-color);
+            color: var(--text-color);
+            margin: 0;
+            padding: 0;
+            animation: fadeIn 1s ease-in;
         }
         .container {
             width: 60%;
-            margin: 0 auto;
+            margin: 100px auto;
             text-align: center;
+            animation: slideUp 0.8s ease-out;
         }
         .file-upload {
             margin-top: 20px;
+            padding: 10px;
+            border: 1px solid var(--border-color);
+            border-radius: 5px;
+            background: transparent;
+            color: var(--text-color);
         }
         .file-info {
             margin-top: 20px;
+            padding: 20px;
+            background: var(--secondary-body);
+            border-radius: 10px;
+            border: 1px solid var(--border-color);
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideUp {
+            from { transform: translateY(30px); opacity: 0; }
+            to { transform: translateY(0); opacity: 1; }
         }
     </style>
 </head>
